@@ -151,6 +151,7 @@ This feature was developed by Aman Pandey as part of the Google Summer of Code p
  * Remove unused snippets _header_with_history.html template (Thibaud Colas)
  * Migrate dialog instantiation to a new `w-dialog` Stimulus controller, including in the Userbar (Loveth Omokaro, LB (Ben) Johnston)
  * Support dialog template cloning using a new `w-teleport` Stimulus controller (Loveth Omokaro, LB (Ben) Johnston)
+ * Remove `"wagtailadmin/shared/field_as_li.html"` template include (Storm Heg)
 
 ## Upgrade considerations
 
@@ -298,6 +299,24 @@ The undocumented shared include `wagtailadmin/shared/last_updated.html` is no lo
 
 <!-- ... -->
 {% human_readable_date my_model.timestamp %}
+```
+
+### Shared include `field_as_li.html` is no longer available
+
+The documented include `"wagtailadmin/shared/field_as_li.html"` has been removed, if being used it will need to be replaced with `"wagtailadmin/shared/field.html"` wrapped within `li` tags.
+
+#### Before
+
+```html+django
+{% include "wagtailadmin/shared/field_as_li.html" %}
+```
+
+#### After
+
+```html+django
+<li>
+    {% include "wagtailadmin/shared/field.html" %}
+</li>
 ```
 
 ### Tag (Tagit) field usage now relies on data attributes
