@@ -36,7 +36,9 @@
                         {% if filter_form.visible_fields %}
                             <ul class="fields">
                                 {% for field in filter_form.visible_fields %}
-                                    {% include "wagtailadmin/shared/field_as_li.html" with field=field %}
+                                    <li>
+                                        {% include "wagtailadmin/shared/field.html" with field=field %}
+                                    </li>
                                 {% endfor %}
                             </ul>
                         {% endif %}
