@@ -13,7 +13,9 @@
 
         <ul class="fields">
             {% for field in creation_form.visible_fields %}
-                {% include "wagtailadmin/shared/field_as_li.html" with field=field %}
+                <li>
+                    {% include "wagtailadmin/shared/field.html" with field=field %}
+                </li>
             {% endfor %}
             <li>
                 {% if create_action_clicked_label %}
