@@ -19,7 +19,9 @@
         <ul class="fields">
             {% block visible_fields %}
                 {% for field in form.visible_fields %}
-                    {% include "wagtailadmin/shared/field_as_li.html" %}
+                    <li>
+                        {% include "wagtailadmin/shared/field.html" %}
+                    </li>
                 {% endfor %}
             {% endblock %}
 
