@@ -1,1 +1,0 @@
-<li>{% include "wagtailadmin/shared/field.html" %}</li>
