@@ -17,7 +17,9 @@
         <ul class="fields nice-padding">
             {% for field in form %}
                 {% if not field.is_hidden %}
-                    {% include "wagtailadmin/shared/field_as_li.html" %}
+                    <li>
+                        {% include "wagtailadmin/shared/field.html" %}
+                    </li>
                 {% else %}
                     {{ field }}
                 {% endif %}
