@@ -33,7 +33,9 @@
                 <form class="task-search" action="{% url 'wagtailadmin_workflows:task_chooser_results' %}" method="GET" novalidate>
                     <ul class="fields">
                         {% for field in search_form %}
-                            {% include "wagtailadmin/shared/field_as_li.html" with field=field %}
+                            <li>
+                                {% include "wagtailadmin/shared/field.html" with field=field %}
+                            </li>
                         {% endfor %}
                     </ul>
                 </form>
@@ -48,7 +50,9 @@
         <form class="task-search" action="{% url 'wagtailadmin_workflows:task_chooser_results' %}" method="GET" novalidate>
             <ul class="fields">
                 {% for field in search_form %}
-                    {% include "wagtailadmin/shared/field_as_li.html" with field=field %}
+                    <li>
+                        {% include "wagtailadmin/shared/field.html" with field=field %}
+                    </li>
                 {% endfor %}
             </ul>
         </form>
