@@ -110,7 +110,9 @@
                     {% icon name="spinner" %}{% trans 'Apply filters' %}
                 </button>
                 {% for field in select_date_form %}
-                    {% include "wagtailadmin/shared/field_as_li.html" with field=field %}
+                    <li>
+                        {% include "wagtailadmin/shared/field.html" with field=field %}
+                    </li>
                 {% endfor %}
             </form>
         </div>
