@@ -23,7 +23,9 @@
 
         <ul class="fields">
             {% for field in form.visible_fields %}
-                {% include "wagtailadmin/shared/field_as_li.html" %}
+                <li>
+                    {% include "wagtailadmin/shared/field.html" %}
+                </li>
             {% endfor %}
 
             <li>
