@@ -32,7 +32,9 @@
                         {% elif field.is_hidden %}
                             {{ field }}
                         {% else %}
-                            {% include "wagtailadmin/shared/field_as_li.html" %}
+                            <li>
+                                {% include "wagtailadmin/shared/field.html" %}
+                            </li>
                         {% endif %}
                     {% endfor %}
                     <li>
