@@ -9,7 +9,9 @@
             {% csrf_token %}
             <ul class="fields">
                 {% for field in form %}
-                    {% include "wagtailadmin/shared/field_as_li.html" with field=field %}
+                    <li>
+                        {% include "wagtailadmin/shared/field.html" with field=field %}
+                    </li>
                 {% endfor %}
                 <li>
                     <button
