@@ -5,7 +5,9 @@
     <form data-chooser-modal-search action="{{ results_url }}" method="GET" autocomplete="off" novalidate>
         <ul class="fields">
             {% for field in filter_form %}
-                {% include "wagtailadmin/shared/field_as_li.html" with field=field %}
+                <li>
+                    {% include "wagtailadmin/shared/field.html" with field=field %}
+                </li>
             {% endfor %}
             {% if popular_tags %}
                 <li class="taglist w-label-3">
