@@ -58,7 +58,9 @@
                     {% if field.is_hidden %}
                         {{ field }}
                     {% else %}
-                        {% include "wagtailadmin/shared/field_as_li.html" with field=field %}
+                        <li>
+                            {% include "wagtailadmin/shared/field.html" with field=field %}
+                        </li>
                     {% endif %}
                 {% endfor %}
                 <li><input type="submit" value="{% trans 'Save' %}" class="button" /></li>
