@@ -6,7 +6,9 @@
     <form class="query-search full-width" action="{% url 'wagtailsearch_admin:queries_chooserresults' %}" method="GET" autocomplete="off" novalidate>
         <ul class="fields">
             {% for field in searchform %}
-                {% include "wagtailadmin/shared/field_as_li.html" with field=field %}
+                <li>
+                    {% include "wagtailadmin/shared/field.html" with field=field %}
+                </li>
             {% endfor %}
             <li class="submit"><input type="submit" value="{% trans 'Search' %}" class="button" /></li>
         </ul>
