@@ -6,7 +6,9 @@
         <div class="tab-content">
             {% csrf_token %}
             <ul class="fields">
-                {% include "wagtailadmin/shared/field_as_li.html" with field=form.content %}
+                <li>
+                    {% include "wagtailadmin/shared/field.html" with field=form.content %}
+                </li>
                 <li>
                     <input type="submit" value="Save" class="button"/>
                 </li>
