@@ -29,17 +29,29 @@
                     <ul class="fields">
                         {% block fields %}
                             {% if form.separate_username_field %}
-                                {% include "wagtailadmin/shared/field_as_li.html" with field=form.username_field %}
+                                <li>
+                                    {% include "wagtailadmin/shared/field.html" with field=form.username_field %}
+                                </li>
                             {% endif %}
-                            {% include "wagtailadmin/shared/field_as_li.html" with field=form.email %}
-                            {% include "wagtailadmin/shared/field_as_li.html" with field=form.first_name %}
-                            {% include "wagtailadmin/shared/field_as_li.html" with field=form.last_name %}
+                            <li>
+                                {% include "wagtailadmin/shared/field.html" with field=form.email %}
+                            </li>
+                            <li>
+                                {% include "wagtailadmin/shared/field.html" with field=form.first_name %}
+                            </li>
+                            <li>
+                                {% include "wagtailadmin/shared/field.html" with field=form.last_name %}
+                            </li>
                             {% block extra_fields %}{% endblock extra_fields %}
                             {% if form.password1 %}
-                                {% include "wagtailadmin/shared/field_as_li.html" with field=form.password1 %}
+                                <li>
+                                    {% include "wagtailadmin/shared/field.html" with field=form.password1 %}
+                                </li>
                             {% endif %}
                             {% if form.password2 %}
-                                {% include "wagtailadmin/shared/field_as_li.html" with field=form.password2 %}
+                                <li>
+                                    {% include "wagtailadmin/shared/field.html" with field=form.password2 %}
+                                </li>
                             {% endif %}
                         {% endblock fields %}
 
@@ -59,8 +71,12 @@
                     aria-labelledby="tab-label-roles"
                 >
                     <ul class="fields">
-                        {% include "wagtailadmin/shared/field_as_li.html" with field=form.is_superuser %}
-                        {% include "wagtailadmin/shared/field_as_li.html" with field=form.groups %}
+                        <li>
+                            {% include "wagtailadmin/shared/field.html" with field=form.is_superuser %}
+                        </li>
+                        <li>
+                            {% include "wagtailadmin/shared/field.html" with field=form.groups %}
+                        </li>
                         <li><button class="button">{% trans "Add user" %}</button></li>
                     </ul>
                 </section>
