@@ -30,20 +30,34 @@
                     <ul class="fields">
                         {% block fields %}
                             {% if form.separate_username_field %}
-                                {% include "wagtailadmin/shared/field_as_li.html" with field=form.username_field %}
+                                <li>
+                                    {% include "wagtailadmin/shared/field.html" with field=form.username_field %}
+                                </li>
                             {% endif %}
-                            {% include "wagtailadmin/shared/field_as_li.html" with field=form.email %}
-                            {% include "wagtailadmin/shared/field_as_li.html" with field=form.first_name %}
-                            {% include "wagtailadmin/shared/field_as_li.html" with field=form.last_name %}
+                            <li>
+                                {% include "wagtailadmin/shared/field.html" with field=form.email %}
+                            </li>
+                            <li>
+                                {% include "wagtailadmin/shared/field.html" with field=form.first_name %}
+                            </li>
+                            <li>
+                                {% include "wagtailadmin/shared/field.html" with field=form.last_name %}
+                            </li>
                             {% block extra_fields %}{% endblock extra_fields %}
                             {% if form.password1 %}
-                                {% include "wagtailadmin/shared/field_as_li.html" with field=form.password1 %}
+                                <li>
+                                    {% include "wagtailadmin/shared/field.html" with field=form.password1 %}
+                                </li>
                             {% endif %}
                             {% if form.password2 %}
-                                {% include "wagtailadmin/shared/field_as_li.html" with field=form.password2 %}
+                                <li>
+                                    {% include "wagtailadmin/shared/field.html" with field=form.password2 %}
+                                </li>
                             {% endif %}
                             {% if form.is_active %}
-                                {% include "wagtailadmin/shared/field_as_li.html" with field=form.is_active %}
+                                <li>
+                                    {% include "wagtailadmin/shared/field.html" with field=form.is_active %}
+                                </li>
                             {% endif %}
 
                         {% endblock fields %}
@@ -64,10 +78,14 @@
                 >
                     <ul class="fields">
                         {% if form.is_superuser %}
-                            {% include "wagtailadmin/shared/field_as_li.html" with field=form.is_superuser %}
+                            <li>
+                                {% include "wagtailadmin/shared/field.html" with field=form.is_superuser %}
+                            </li>
                         {% endif %}
 
-                        {% include "wagtailadmin/shared/field_as_li.html" with field=form.groups %}
+                        <li>
+                            {% include "wagtailadmin/shared/field.html" with field=form.groups %}
+                        </li>
                         <li>
                             <input type="submit" value="{% trans 'Save' %}" class="button"/>
                             {% if can_delete %}
